--- a/README.adoc
+++ b/README.adoc
@@ -2,8 +2,8 @@
 // URIs:
 :uri-qg-status: https://sonarcloud.io/dashboard?id=sc-sq-c-family-examples_macos-cmake-azure-sc
 :img-qg-status: https://sonarcloud.io/api/project_badges/measure?project=sc-sq-c-family-examples_macos-cmake-azure-sc&metric=alert_status
-:uri-build-status: https://dev.azure.com/sc-sq-c-family-examples/macos-cmake-azure-sc/_build/latest?definitionId=2
-:img-build-status: https://dev.azure.com/sc-sq-c-family-examples/macos-cmake-azure-sc/_apis/build/status/sc-sq-c-family-examples.macos-cmake-azure-sc
+:uri-build-status: https://dev.azure.com/sc-sq-c-family-examples/macos-cmake-azure-sc/_build/latest?definitionId=3&branchName=main
+:img-build-status: https://dev.azure.com/sc-sq-c-family-examples/macos-cmake-azure-sc/_apis/build/status/sc-sq-c-family-examples.macos-cmake-azure-sc?branchName=main
 
 image:{img-build-status}[Build Status, link={uri-build-status}]
 image:{img-qg-status}[Quality Gate Status,link={uri-qg-status}]
