--- a/README.adoc
+++ b/README.adoc
@@ -13,7 +13,7 @@ image:{img-qg-status}[Quality Gate Status,link={uri-qg-status}]
 :note-caption: :information_source:
 NOTE: This simple example ignores https://sonarcloud.io/documentation/analysis/languages/cfamily/#analysis-cache[analysis cache] and https://sonarcloud.io/documentation/analysis/languages/cfamily/#multithreaded-code-scan[multithreaded execution] both of which can boost analysis significantly.
 
-It is very easy to analyze a C/{cpp}/Objective-C project with SonarCloud https://sonarcloud.io/documentation/getting-started/azure-devops/[on Azure DevOps]:
+It is very easy to analyze a C, {cpp} and Objective-C project with SonarCloud https://sonarcloud.io/documentation/getting-started/azure-devops/[on Azure DevOps]:
 
 . Create a `sonar-project.properties` file to store your configuration
 . Install SonarCloud extension for your organization:
